- Change: Moved the somewhat out-dated particle group base class "PLScene::SNParticleGroup" into the "PLParticleGroups" plugin project
- Change: Updated libogg from "1.2.0" to "1.2.2"
- Change: Updated libvorbis from "1.3.1" to "1.3.2"
- Change: Updated from "Cg Toookit 3.0 - July 2010" to "Cg Toookit 3.0 - November 2010"
- Change: Updated OpenEXR from "1.4.0" to "1.6.1"
- Bugfix: The PLImageLoaderEXR plugin was broken, loading exr (high dynamic range image file format) images is working again
- Bugfix: "PLGraphics::IEConvert" e.g. RGB to RGBA is now working for floating point image formats
- Bugfix: "PLGraphics::IEScale" was not always working correctly
- Bugfix: "PLPhysics::SNMPhysicsCharacterController" rotation was broken in "PixelLight 0.9.4-R1"
- Bugfix: "PLGraphics::ImageLoaderJPG": Saving a given RGBA image was not working
- Bugfix: "PLScene::SceneNode::DirtyAABoundingBox()" was buggy, this caused e.g. particle effects to be "culled to early"
- Bugfix: "PLMath::Math::GetRandNegFloat()" was broken


Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
- Feature: Linux 64 bit support for a minimal build added (64 bit support for optional projects not yet added)
- Feature: Added basic PLDemoRendererTexturing demo
- Feature: Added "PLEngine::SceneRendererTool" helper class for simplified scene renderer access
- Feature: Autodesk 3ds Max 2011 scene exporter added
- Feature: Performance improvements within the string implementation
- Feature: Added a static adapter class within PLGeneral for mapping Qt strings to PixelLight strings and vice versa
- Change: Integrated "PLCompositing::SRPPostProcessing" into the compositing system, now it's possible to use post processing within the deferred scene renderer
- Change: Moved nearly all compositing relevant classes from PLScene to PLCompositing
- Change: Scene graph update refactoring for less CPU usage