@@ -33,7 +33,7 @@
         </Node>
         <Node Class="PLScene::SNMesh" Position="0 -0.5 -5" Scale="0.007 0.007 0.007" Name="Soldier" Mesh="Data/Meshes/Soldier.mesh">
             <Modifier Class="PLScene::SNMMeshJoint" Flags="UseFallbackRotation" Name="Soldat Head" RotationFrom="HeadLookAtHelper" Min="-70.0 -40.0 -10.0" Max="70.0 60.0 10.0" />
-            <Modifier Class="PLPhysics::SNMPhysicsBodyEllipsoid" Mass="1" UseRotation="0" InitFrozen="0" />
+            <Modifier Class="PLPhysics::SNMPhysicsBodyEllipsoid" Mass="1" Flags="InitUnfrozen|NoRotation" />
             <Modifier Class="PLPhysics::SNMPhysicsJointUpVector" />
             <Modifier Class="PLPhysics::SNMPhysicsCharacterController" YRotVelocity="15" IdleAnimation="idle_0" WalkAnimation="walk_0" />
             <Modifier Class="PLScene::SNMAnchor" AttachedNode="CameraTargetPositionHelper" PositionOffset="0 300 -400" />
