@@ -38,7 +38,7 @@
             <Modifier Class="PLPhysics::SNMPhysicsBodySphere" Mass="0.5" />
         </Node>
         <Node Class="PLScene::SNCamera" Name="FirstPersonCamera" Position="0 -0.5 -5">
-            <Modifier Class="PLPhysics::SNMPhysicsBodyEllipsoid" Mass="1" PositionOffset="0.0 -0.5 0.0" UseRotation="0" Radius="0.2 0.5 0.2" InitFrozen="0" />
+            <Modifier Class="PLPhysics::SNMPhysicsBodyEllipsoid" Mass="1" PositionOffset="0.0 -0.5 0.0" Radius="0.2 0.5 0.2" Flags="InitUnfrozen|NoRotation" />
             <Modifier Class="PLPhysics::SNMPhysicsJointUpVector" />
             <Modifier Class="PLPhysics::SNMPhysicsCharacterController" />
             <Modifier Class="PLScene::SNMLookController" />
