@@ -64,17 +64,38 @@ class SNMPhysicsBody : public SNMPhysics {
 
 
 	//[-------------------------------------------------------]
+	//[ Public definition                                     ]
+	//[-------------------------------------------------------]
+	public:
+		/**
+		*  @brief
+		*    Scene node modifier flags (PLScene::SceneNodeModifier flags extension)
+		*/
+		enum EFlags {
+			InitUnfrozen = 1<<2,	/**< The body is not frozen on initialization */
+			NoAutoFreeze = 1<<3,	/**< Do not freeze the body automatically */
+			NoGravity    = 1<<4,	/**< The body is not influenced by gravity */
+			NoRotation   = 1<<5		/**< Rotation is not used */
+		};
+		pl_enum(EFlags)
+			pl_enum_base(SNMPhysics::EFlags)
+			pl_enum_value(InitUnfrozen,	"The body is not frozen on initialization")
+			pl_enum_value(NoAutoFreeze,	"Do not freeze the body automatically")
+			pl_enum_value(NoGravity,	"The body is not influenced by gravity")
+			pl_enum_value(NoRotation,	"Rotation is not used")
+		pl_enum_end
+
+
+	//[-------------------------------------------------------]
 	//[ RTTI interface                                        ]
 	//[-------------------------------------------------------]
 	pl_class(PLPHYSICS_RTTI_EXPORT, SNMPhysicsBody, "PLPhysics", PLPhysics::SNMPhysics, "Abstract physics body scene node modifier")
-		pl_attribute(Mass,				float,				0.0f,								ReadWrite,	GetSet,			"Mass of the physics body, 0=static body",				"Min='0.0'")
-		pl_attribute(CenterOfMass,		PLMath::Vector3,	PLMath::Vector3(0.0f, 0.0f, 0.0f),	ReadWrite,	GetSet,			"Relative center of mass",								"")
-		pl_attribute(AutoFreeze,		bool,				true,								ReadWrite,	GetSet,			"Freeze the body automatically?",						"")
-		pl_attribute(UseGravity,		bool,				true,								ReadWrite,	GetSet,			"Did the gravity influence this body?",					"")
-		pl_attribute(UseRotation,		bool,				true,								ReadWrite,	DirectValue,	"Use rotation?",										"")
-		pl_attribute(PositionOffset,	PLMath::Vector3,	PLMath::Vector3(0.0f, 0.0f, 0.0f),	ReadWrite,	GetSet,			"Position offset relative to the scene node (=origin)",	"")
-		pl_attribute(InitFrozen,		bool,				true,								ReadWrite,	DirectValue,	"Is this body frozen on initialization?",				"")
-		pl_attribute(CollisionGroup,	PLGeneral::uint8,	0,									ReadWrite,	GetSet,			"The collision group the body is in (0-31)",			"Min='0' Max='31'")
+		pl_attribute(Mass,				float,					0.0f,								ReadWrite,	GetSet,	"Mass of the physics body, 0=static body",				"Min='0.0'")
+		pl_attribute(CenterOfMass,		PLMath::Vector3,		PLMath::Vector3(0.0f, 0.0f, 0.0f),	ReadWrite,	GetSet,	"Relative center of mass",								"")
+		pl_attribute(PositionOffset,	PLMath::Vector3,		PLMath::Vector3(0.0f, 0.0f, 0.0f),	ReadWrite,	GetSet,	"Position offset relative to the scene node (=origin)",	"")
+		pl_attribute(CollisionGroup,	PLGeneral::uint8,		0,									ReadWrite,	GetSet,	"The collision group the body is in (0-31)",			"Min='0' Max='31'")
+		// Overwritten PLScene::SceneNodeModifier variables
+		pl_attribute(Flags,				pl_flag_type(EFlags),	0,									ReadWrite,	GetSet,	"Flags",												"")
 	pl_class_end
 
 
@@ -86,14 +107,11 @@ class SNMPhysicsBody : public SNMPhysics {
 		PLPHYSICS_API void SetMass(float fValue);
 		PLPHYSICS_API const PLMath::Vector3 &GetCenterOfMass() const;
 		PLPHYSICS_API void SetCenterOfMass(const PLMath::Vector3 &vValue);
-		PLPHYSICS_API bool GetAutoFreeze() const;
-		PLPHYSICS_API void SetAutoFreeze(bool bValue);
-		PLPHYSICS_API bool GetUseGravity() const;
-		PLPHYSICS_API void SetUseGravity(bool bValue);
 		PLPHYSICS_API const PLMath::Vector3 &GetPositionOffset() const;
 		PLPHYSICS_API void SetPositionOffset(const PLMath::Vector3 &vValue);
 		PLPHYSICS_API PLGeneral::uint8 GetCollisionGroup() const;
 		PLPHYSICS_API void SetCollisionGroup(PLGeneral::uint8 nValue);
+		PLPHYSICS_API virtual void SetFlags(PLGeneral::uint32 nValue);
 
 
 	//[-------------------------------------------------------]
@@ -173,8 +191,6 @@ class SNMPhysicsBody : public SNMPhysics {
 	protected:
 		float			  m_fMass;				/**< Mass of the physics body, 0=static body */
 		PLMath::Vector3	  m_vCenterOfMass;		/**< Relative center of mass */
-		bool			  m_bAutoFreeze;		/**< Freeze the body automatically? */
-		bool			  m_bUseGravity;		/**< Did the gravity influence this body? */
 		PLMath::Vector3	  m_vPositionOffset;	/**< Position offset relative to the scene node (=origin) */
 		PLGeneral::uint8  m_nCollisionGroup;	/**< The collision group the body is in (0-31) */
 		SCPhysicsWorld   *m_pWorldContainer;	/**< The PL physics world scene node container the physics body is in, can be a null pointer */
