@@ -13,6 +13,7 @@ Changes in PixelLight 0.9.5-R1 (not yet released)
 - Change: Updated libvorbis from "1.3.1" to "1.3.2"
 - Change: Updated from "Cg Toookit 3.0 - July 2010" to "Cg Toookit 3.0 - November 2010"
 - Change: Updated OpenEXR from "1.4.0" to "1.6.1"
+- Change: "PLPhysics::SNMPhysicsBody": Made following attributes to flags: InitFrozen->InitUnfrozen, AutoFreeze->NoAutoFreeze, UseGravity->NoGravity, UseRotation->NoRotation
 - Bugfix: The PLImageLoaderEXR plugin was broken, loading exr (high dynamic range image file format) images is working again
 - Bugfix: "PLGraphics::IEConvert" e.g. RGB to RGBA is now working for floating point image formats
 - Bugfix: "PLGraphics::IEScale" was not always working correctly
